--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
             <input type="text" class="visores" id="visor" readonly>
         </div>
         <div class="teclado">
-            <button class="botao" onclick="limpar()">C</button>
-            <button class="botao">⁺/₋</button>
-            <button class="botao" onclick="inserir('%')">%</button>
-            <button class="botao" onclick="inserir('/')">/</button>
+            <button class="botao especial" onclick="limpar()">C</button>
+            <button class="botao especial" onclick="inverter_valor()">⁺/₋</button>
+            <button class="botao especial" onclick="porcentagem()">%</button>
+            <button class="botao operacao" onclick="inserir('/')">÷</button>
 
             <button class="botao" onclick="inserir('7')">7</button>
             <button class="botao" onclick="inserir('8')">8</button>
             <button class="botao" onclick="inserir('9')">9</button>
-            <button class="botao" onclick="inserir('*')">*</button>
+            <button class="botao operacao" onclick="inserir('*')">x</button>
 
             <button class="botao" onclick="inserir('4')">4</button>
             <button class="botao" onclick="inserir('5')">5</button>
             <button class="botao" onclick="inserir('6')">6</button>
-            <button class="botao" onclick="inserir('-')">-</button>
+            <button class="botao operacao" onclick="inserir('-')">-</button>
 
             <button class="botao" onclick="inserir('1')">1</button>
             <button class="botao" onclick="inserir('2')">2</button>
             <button class="botao" onclick="inserir('3')">3</button>
-            <button class="botao" onclick="inserir('+')">+</button>
+            <button class="botao operacao" onclick="inserir('+')">+</button>
 
             <button class="botao zero" onclick="inserir('0')">0</button>
-            <button class="botao" onclick="inserir('.')">.</button>
-            <button class="botao" onclick="calcular()">=</button>
+            <button class="botao especial" onclick="inserir('.')">.</button>
+            <button class="botao igual" onclick="calcular()">=</button>
         </div>
     </div>
 </body>
