--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
 <body>
     <div class="calculadora">
         <div class="display">
-            <input type="text" class="visores" id="calc_anterior" readonly>
-            <input type="text" class="visores" id="visor" readonly>
+            <div class = "anterior">
+                <input type="text" class="visores" id="calc_anterior" readonly>
+            </div>
+            <div class = "linhaVisores">
+                <input type="text" class="visores" id="visor2" readonly>
+                <input type="text" class="visores" id="visor" readonly>
+            </div> 
         </div>
         <div class="teclado">
             <button class="botao especial" onclick="limpar()">C</button>
